<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/button_singleTon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SingleTon"
            android:layout_marginTop="100dp"/>

        <Button
            android:id="@+id/button_builder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Builder"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/button_templateMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/templateMethod"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/button_observer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Observer"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/button_adapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Adapter"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</layout>